# tmp-pytorch-trt-plugin-example

./: README.md  custom_generate_plugin_converter.py  main.py  pyproject.toml
