[project]
name = "triton-exp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.9"
dependencies = [
    "black>=25.1.0",
    "torch>2.6.0",
    "torch-tensorrt",
]

[tool.uv.sources]
torch = [
    {index = "pytorch-cuda-nightly", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torch-tensorrt = [
    {index = "pytorch-cuda-nightly", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cuda-nightly"
url = "https://download.pytorch.org/whl/nightly/cu128"
